cart and customer mappers are refactored